Add PrimaryDist tests, rename local -> embedded